# weather-aggregator

./: .gitignore  README.md  pyproject.toml
bulgarian_meteo_pro/: models.py  serializers.py  urls.py  views.py
stations/: urls.py  views.py
weather_aggregator/: settings.py  urls.py
weather_master_x/: models.py  serializers.py  urls.py  views.py
